HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DynamicUndefinedClassType/Source/Main.uv
//! Rejected polymorphism specimen for a dynamic class type with an undefined class.

internal procedure acceptMissingDynamic(value: $MissingDynamicClass) -> i32 {
    return 1
}
